intranet-kubernetes/rocketchat/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: intranet-campusna
spec:
  serviceName: mongodbsvc
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
      - name: mongodb
        image: docker.io/bitnami/mongodb:5.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: rocket-mongodb-data
          mountPath: /data/db
        command:
        - mongod
        - "--bind_ip_all"
        - "--replSet"
        - rs0
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: rocket-mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 3Gi
