intranet-kubernetes/rocketchat/mongoservice.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: intranet-campusna
  name: mongodbsvc
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
