intranet-kubernetes/rocketchat/rocketchatsvc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: intranet-campusna
  name: rocketchat-server
spec:
  selector:
    app: rocketchat-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: LoadBalancer
